# openh264

./: .gitignore  CMakeLists.txt  CMakePresetsBase.json  openh264.pc.in
codec/: CMakeLists.txt
codec/common/: CMakeLists.txt
codec/console/: CMakeLists.txt
codec/console/common/: CMakeLists.txt
codec/console/dec/: CMakeLists.txt
codec/console/enc/: CMakeLists.txt
codec/decoder/: CMakeLists.txt
codec/decoder/core/src/: decode_slice.cpp
codec/encoder/: CMakeLists.txt
codec/encoder/core/src/: encoder_ext.cpp  ratectl.cpp
codec/encoder/plus/src/: welsEncoderExt.cpp
codec/processing/: CMakeLists.txt
