cmake_minimum_required(VERSION 3.12)
project(openh264)
include(GNUInstallDirs)
include(flags OPTIONAL)
if(DEFINED XP_PRO_VER)
  set(prefix ${CMAKE_INSTALL_PREFIX})
  set(lib_dir ${CMAKE_INSTALL_LIBDIR})
  set(inc_dir ${CMAKE_INSTALL_INCLUDEDIR})
  set(VERSION ${XP_PRO_VER})
  set(LIBS -lstdc++)
  configure_file(${CMAKE_PROJECT_NAME}.pc.in ${CMAKE_PROJECT_NAME}.pc @ONLY NEWLINE_STYLE LF)
  install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_PROJECT_NAME}.pc DESTINATION ${CMAKE_INSTALL_DATADIR}/cmake)
endif()
add_subdirectory(codec)
