cmake_minimum_required(VERSION 3.31)
set(CMAKE_PROJECT_TOP_LEVEL_INCLUDES .devcontainer/cmake/xproinc.cmake)
project(openh264)
include(GNUInstallDirs)
include(xpflags)
set(lib ${PROJECT_NAME})
if(DEFINED XP_NAMESPACE)
  set(nameSpace NAMESPACE ${XP_NAMESPACE}::)
  string(PREPEND lib "${XP_NAMESPACE}::")
endif()
if(NOT DEFINED XP_INSTALL_CMAKEDIR)
  set(XP_INSTALL_CMAKEDIR ${CMAKE_INSTALL_DATADIR}/cmake)
endif()
set(targetsFile ${PROJECT_NAME}-targets)
xpPackageDevel(TARGETS_FILE ${targetsFile} LIBRARIES ${lib})
if(DEFINED XP_PRO_VER)
  set(prefix ${CMAKE_INSTALL_PREFIX})
  set(lib_dir ${CMAKE_INSTALL_LIBDIR})
  set(inc_dir ${CMAKE_INSTALL_INCLUDEDIR})
  set(VERSION ${XP_PRO_VER})
  set(LIBS -lstdc++)
  configure_file(${CMAKE_PROJECT_NAME}.pc.in ${CMAKE_PROJECT_NAME}.pc @ONLY NEWLINE_STYLE LF)
  install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_PROJECT_NAME}.pc DESTINATION ${CMAKE_INSTALL_DATADIR}/cmake)
endif()
add_subdirectory(codec)
