cmake_minimum_required(VERSION 3.31)
set(CMAKE_PROJECT_TOP_LEVEL_INCLUDES .devcontainer/cmake/xproinc.cmake)
project(openh264)
include(GNUInstallDirs)
include(xpflags)
set(lib ${PROJECT_NAME})
if(DEFINED XP_NAMESPACE)
  set(nameSpace NAMESPACE ${XP_NAMESPACE}::)
  string(PREPEND lib "${XP_NAMESPACE}::")
endif()
if(NOT DEFINED XP_INSTALL_CMAKEDIR)
  set(XP_INSTALL_CMAKEDIR ${CMAKE_INSTALL_DATADIR}/cmake)
endif()
set(targetsFile ${PROJECT_NAME}-targets)
xpPackageDevel(TARGETS_FILE ${targetsFile} LIBRARIES ${lib})
if(DEFINED XP_NAMESPACE)
  set(prefix @xpuse-openh264_DIR@/../..)
  set(lib_dir ${CMAKE_INSTALL_LIBDIR})
  set(inc_dir ${CMAKE_INSTALL_INCLUDEDIR})
  xpGetVersionString(verString)
  set(VERSION ${verString})
  set(LIBS -lstdc++)
  set(pcFile ${CMAKE_PROJECT_NAME}.pc.in)
  configure_file(${pcFile} ${CMAKE_CURRENT_BINARY_DIR} @ONLY NEWLINE_STYLE LF)
  install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${pcFile} DESTINATION ${XP_INSTALL_CMAKEDIR})
endif()
find_package(yasm)
xpGetPkgVar(yasm EXE) # sets YASM_EXE
get_target_property(yasmExe ${YASM_EXE} LOCATION)
set(CMAKE_ASM_NASM_COMPILER ${yasmExe})
add_subdirectory(codec)
